# metrics-utility

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CHANGELOG.md  Makefile  README.md  debug_utils.py  generator.py  manage.py  pyproject.toml  run-ccsp2-build  run-ccsp2-gather  run-perf  run-renewal  setup.cfg  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: main.yml  pr-checks.yml  pytest.yml  sonar-cloud.yml  sonarcloud.yml
docs/: developer_setup.md  old-readme.md
docs/contributing/: CONTRIBUTING.md
metrics_utility/: __init__.py  debug_utils.py  exceptions.py  logger.py  management_utility.py  metric_utils.py
metrics_utility/anonymized_rollups/: __init__.py  anonymized_rollups.py  base_anonymized_rollup.py  collections.json  collections_types.py  events_modules_anonymized_rollup.py  execution_environments_anonymized_rollup.py  jobhostsummary_anonymized_rollup.py  jobs_anonymized_rollup.py  task_anonymized_rollups.py
metrics_utility/automation_controller_billing/: collector.py  collectors.py  csv_file_splitter.py  helpers.py
metrics_utility/automation_controller_billing/base/: s3_handler.py
metrics_utility/automation_controller_billing/dataframe_engine/: base.py  dataframe_collection_status.py  dataframe_content_usage.py  dataframe_inventory_scope.py  dataframe_jobhost_summary_usage.py  db_dataframe_host_metric.py  factory.py
metrics_utility/automation_controller_billing/dedup/: ccsp.py  factory.py  renewal_guidance.py
metrics_utility/automation_controller_billing/extract/: base.py  extractor_common.py  extractor_controller_db.py  extractor_directory.py  extractor_s3.py  factory.py
metrics_utility/automation_controller_billing/package/: factory.py  package_crc.py  package_directory.py  package_s3.py
metrics_utility/automation_controller_billing/report/: base.py  factory.py  report_ccsp.py  report_ccsp_v2.py  report_renewal_guidance.py  report_renewal_guidance_v2.py
metrics_utility/automation_controller_billing/report/renewal_guidance/: dedup.py
metrics_utility/automation_controller_billing/report_saver/: factory.py  report_saver_directory.py  report_saver_s3.py
metrics_utility/base/: README.md  __init__.py  collection.py  collection_csv.py  collection_json.py  collector.py  csv_file_splitter.py  db_lock_helpers.py  decorators.py  package.py  utils.py
metrics_utility/management/: help_text.py  validation.py
metrics_utility/management/commands/: build_report.py  build_report_v2.py  gather_automation_controller_billing_data.py
metrics_utility/test/: conftest.py  test_automation_controller_billing_helpers.py  test_collectors.py  test_db_lock_helpers.py  test_extra_params_validation.py  util.py
metrics_utility/test/base/classes/: analytics_collector.py
metrics_utility/test/base/functional/: helpers.py  test_gathering.py  test_slicing.py
metrics_utility/test/ccspv_reports/: complex_test_CCSPv2.py  conftest.py  test_CCSP.py  test_CCSPv2.py  test_CCSPv2_with_no_data.py  test_build_report_unit.py  test_complex_CCSP_sanity_check.py  test_complex_CCSP_with_indirect.py  test_complex_CCSP_with_scope.py  test_complex_CCSPv2.py  test_complex_CCSPv2_sanity_check.py  test_complex_CCSPv2_with_indirect.py  test_complex_CCSPv2_with_nodes_by_orgs.py  test_complex_CCSPv2_with_scope.py  test_consistent_indirectly_managed_nodes_output.py  test_empty_data_for_CCSP_and_CCSPv2.py
metrics_utility/test/ccspv_reports/dedup/test_complex_CCSPv2_with_canonical_facts/: test_complex_CCSPv2_with_canonical_facts.py
metrics_utility/test/ccspv_reports/dedup/test_complex_CCSPv2_with_canonical_facts/reports/: CCSPv2-2025-07-08--2025-07-11.xlsx
metrics_utility/test/dedup/: test_ccsp.py
metrics_utility/test/gather/: test_directory_gather.py  test_gather_jobs_events_summaries_service.py  test_gather_ranges.py  test_jobhostsummary_gather.py  test_s3_gather.py  test_total_workers_vcpu.py
metrics_utility/test/management/commands/: test_build_report_unit.py  test_gather_automation_controller_billing_data.py
metrics_utility/test/renewal_guidance/: test_build_spreadsheet_method.py  test_candidate.py  test_get_intervals.py  test_integration_gather_build_report_renewal_guidance.py  test_renewal_guidance_query_methods.py
metrics_utility/test/snapshot_tests/: snapshot_utils.py
metrics_utility/test/snapshot_tests/CCSP/: CCSP_snapshot_generator.py  CCSP_snapshot_test.py
metrics_utility/test/snapshot_tests/CCSP/data/CCSP/: snapshot_def_2024-02-01--2024-02-29.json  snapshot_def_2024-02-05--2024-04-30.json  (+7 more)
metrics_utility/test/test_anonymized_rollups/: test_events_modules_anonymized_rollups.py  test_execution_environments_anonymized_rollups.py  test_from_gather_to_json.py  test_jobhostsummary_anonymized_rollups.py  test_jobs_anonymized_rollups.py
metrics_utility/test/test_data/schemas/awx/: latest.sql  roles.sql
metrics_utility/test/validation/: test_extra_params_validation.py  test_parse_helpers.py  test_s3_env.py  test_validation.py
mock_awx/awx/: __init__.py
mock_awx/awx/main/utils/: __init__.py
mock_awx/settings/: __init__.py
testathon/: build_and_copy.py  gather_all.py  generate_data_for_testathon.py  printvars.py  readme.md  testathon_data_prepare.py
tools/docker/: conf_setting.sql  conf_settings.sql  docker-compose.yaml  main_hostmetric.sql  main_jobhostsummary.sql  test_Containerfile
tools/perf/: generator.py  run-perf-gen
workers/: 0-gather-controller-crc.py  1-gather-controller-full.py  2-rollup-controller-hosts.py  3-report-ccspv2.py  4-cleanup-ccsp.py  5-report-renewal.py
(+27 files in other folders)
