[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-utility"
version = "0.1.0"
description = "A metrics utility for Ansible"
dependencies = [
    "boto3==1.35.96",
    "botocore==1.35.96",
    "distro==1.9.0",
    "django==4.2.16",
    "django-ansible-base>=2025.1.3",
    "insights-analytics-collector==0.3.2",
    "openpyxl==3.1.2",
    "pandas==2.2.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "requests==2.32.3",
    "ruff>=0.9.2",
    "setuptools==70.3.0",
]
requires-python = ">=3.11, <3.13"

# Do not uncomment the line below. We need to be able to override the version via a file, and this
# causes the "version" key in setup.cfg to be ignored.
# [tool.setuptools_scm]

[tool.ruff]
# Allow longer lines than ruff's default 88.
line-length = 150
# PEP 8 standard
indent-width = 4

[tool.ruff.format]
# Normalize double quotes to single quotes
quote-style = "single"
# No tabs, spaces only
indent-style = "space"

[tool.ruff.lint]
extend-select = [
# Essential PEP 8 errors (indentation, syntax)
    "E",
# PEP 8 warnings (whitespace, line breaks)
    "W",
# PEP 8 naming conventions
#   "N",
# Python syntax upgrades
#   "UP",
]

[tool.ruff.lint.isort]
# Separate direct imports from 'from' imports
lines-between-types = 1
# Order alphabetically and by case
order-by-type = true
# Use a single line after each import block
lines-after-imports = 1