[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-utility"
dynamic = ["version"] # from setup.cfg
description = "A metrics utility for Ansible"
dependencies = [
    "boto3==1.35.96",
    "botocore==1.35.96",
    "distro==1.9.0",
    "django==4.2.21",
    "kubernetes>=33.1.0",
    "openpyxl==3.1.2",
    "pandas>=2.2.3",
    "psycopg==3.2.10",
    "requests==2.32.5",
    "setuptools==80.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
authors = [
  {name = "Red Hat", email = "info@ansible.com"},
]
keywords = ["ansible", "metrics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
metrics-utility = "metrics_utility:manage"

[project.urls]
Repository = "https://github.com/ansible/metrics-utility.git"
Issues = "https://github.com/ansible/metrics-utility/issues"
Changelog = "https://github.com/ansible/metrics-utility/blob/devel/CHANGELOG.md"

[dependency-groups]
dev = [
    "django-ansible-base>=2025.1.3",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

# Do not uncomment the line below. We need to be able to override the version via a file, and this
# causes the "version" key in setup.cfg to be ignored.
# [tool.setuptools_scm]

[tool.ruff]
# Allow longer lines than ruff's default 88.
line-length = 150
# PEP 8 standard
indent-width = 4

[tool.ruff.format]
# Normalize double quotes to single quotes
quote-style = "single"
# No tabs, spaces only
indent-style = "space"

[tool.ruff.lint]
extend-select = [
# Essential PEP 8 errors (indentation, syntax)
    "E",
# PEP 8 warnings (whitespace, line breaks)
    "W",
# PEP 8 naming conventions
#   "N",
# Python syntax upgrades
#   "UP",
# Sort imports
    "I",
]

[tool.ruff.lint.isort]
# Separate direct imports from 'from' imports
lines-between-types = 1
# Use a single line after each import block
lines-after-imports = 2
