[metadata]
name = metrics_utility
author = Red Hat
author_email = info@ansible.com
version = 0.5.0

[options]
packages = find:

zip_safe = False
include_package_data = False

install_requires =
    pandas~=2.2.1
    openpyxl~=3.1.2
    boto3

[options.packages.find]
include = *

[options.entry_points]
console_scripts = metrics-utility = metrics_utility:manage
